# renov-easy

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  package.json
server/: .dockerignore  .env.development  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README-zh.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
server/api/: Cargo.toml
server/api/examples/: test_bilingual.rs
server/api/i18n/: error_messages.toml
server/api/src/: app.rs  config.rs  dto.rs  lib.rs  main.rs
server/api/src/config/: error_config.rs
server/api/src/dto/: auth.rs  auth_dto.rs  error.rs  mod.rs
server/api/src/handlers/: error.rs  error_handler.rs  error_standard.rs  mod.rs
server/api/src/i18n/: mod.rs
server/api/src/i18n/locales/en-US/: auth.toml  general.toml  token.toml  validation.toml
server/api/src/i18n/locales/zh-CN/: auth.toml  (+3 more)
server/api/src/middleware/: auth.rs  auth_middleware.rs  cors.rs  error_handler.rs  mod.rs  rate_limit.rs  rate_limiter.rs  security.rs
server/api/src/routes/: auth.rs
server/api/src/routes/auth/: logout.rs  mod.rs  refresh.rs  select_type.rs  send_code.rs  verify_code.rs
server/api/tests/: README.md  auth_middleware_test.rs  error_handling_test.rs  i18n_auth_test.rs  i18n_test.rs  integration_test.rs  logout_test.rs  middleware_integration_test.rs  send_code_test.rs  test_bilingual_errors.rs  test_config.rs
server/api/tests/routes/auth/: send_code_test.rs  verify_code_test.rs
server/core/: Cargo.toml
server/core/src/: lib.rs
server/core/src/domain/: mod.rs
server/core/src/domain/entities/: audit.rs  mod.rs  token.rs  user.rs  verification_code.rs
server/core/src/domain/events/: mod.rs
server/core/src/domain/value_objects/: auth_response.rs  mod.rs
server/core/src/errors/: domain_error.rs  mod.rs  types.rs
server/core/src/errors/tests/: domain_error_tests.rs  error_tests.rs  mod.rs
server/core/src/repositories/: mod.rs  token_repository.rs  user_repository.rs
server/core/src/repositories/audit/: mock.rs  mod.rs  noop.rs  repository.rs  trait.rs
server/core/src/repositories/token/: mock.rs  mod.rs  repository.rs  trait.rs
server/core/src/repositories/user/: mock.rs  mod.rs  repository.rs  trait.rs
server/core/src/services/: auth_service.rs  mod.rs  token_service.rs  verification_service.rs
server/core/src/services/audit/: mod.rs  service.rs
server/core/src/services/auth/: account_lock.rs  attack_detector.rs  config.rs  delay_response.rs  mod.rs  phone_utils.rs  rate_limiter.rs  service.rs
server/core/src/services/encryption/: encrypted_cache_trait.rs  key_manager.rs  mod.rs  otp_encryption.rs  verification_adapter.rs
server/core/src/services/token/: cleanup.rs  config.rs  key_manager.rs  mod.rs  service.rs
server/core/src/services/verification/: config.rs  enhanced_verification.rs  mod.rs  service.rs  traits.rs  types.rs
server/core/tests/: otp_encryption_integration.rs  verification_integration.rs
server/infra/: Cargo.toml
server/infra/examples/: otp_redis_storage_demo.rs  rate_limiter_demo.rs  redis_verification.rs  test_sms.rs  verification_cache_demo.rs  verification_service_demo.rs
server/infra/src/: lib.rs
server/infra/src/cache/: mod.rs  otp_storage.rs  redis_client.rs  verification_cache.rs
server/infra/src/cache/tests/: mod.rs  otp_storage_tests.rs  redis_client_tests.rs  verification_cache_tests.rs
server/infra/src/database/: connection.rs  mod.rs
server/infra/src/database/mysql/: audit_repository_impl.rs  mod.rs  token_repository_impl.rs  user_repository_impl.rs
server/infra/src/database/repositories/: mod.rs  otp_repository.rs
server/infra/src/database/tests/: connection_tests.rs  mod.rs
server/infra/src/services/: mod.rs
server/infra/src/services/auth/: mod.rs  rate_limiter.rs
server/infra/src/sms/: aws_sns.rs  aws_sns_trait_adapter.rs  failover_sms.rs  mod.rs  sms_service.rs  twilio.rs  twilio_trait_adapter.rs
server/infra/src/sms/tests/: aws_sns_tests.rs  create_service_tests.rs  mock_sms_tests.rs  mod.rs  sms_service_tests.rs  twilio_tests.rs
server/infra/tests/: database_integration.rs  lib_integration.rs  otp_redis_integration.rs  rate_limiter_integration.rs  redis_integration.rs  sms_failover_integration.rs  sms_integration.rs
server/infrastructure/: Cargo.toml  README.md
server/infrastructure/examples/: redis_verification.rs  test_sms.rs  verification_cache_demo.rs  verification_service_demo.rs
server/infrastructure/src/: lib.rs
server/infrastructure/src/cache/: mod.rs  redis_client.rs  verification_cache.rs
server/infrastructure/src/cache/tests/: mod.rs  redis_client_tests.rs
server/infrastructure/src/database/: connection.rs  mod.rs
server/infrastructure/src/database/mysql/: token_repository_impl.rs  user_repository_impl.rs
server/infrastructure/src/database/tests/: connection_tests.rs
server/infrastructure/src/sms/: mock_sms.rs  mod.rs  sms_service.rs  test_integration.rs
server/infrastructure/src/sms/tests/: mod.rs
server/infrastructure/tests/: database_integration.rs  lib_integration.rs  redis_integration.rs  sms_integration.rs
server/migrations/: 001_create_users_table.sql  002_create_tokens_audit_tables.sql  002_create_verification_codes_table.sql  003_create_refresh_tokens_table.sql  004_create_auth_audit_log_table.sql  005_create_orders_table.sql  005_create_otp_fallback_table.sql  008_create_communication_tables.sql  009_create_system_tables.sql
server/migrations/old-version/: 003_create_user_profiles_table.sql  004_create_service_categories_table.sql  006_create_worker_related_tables.sql  007_create_order_interaction_tables.sql
server/scripts/: generate_rs256_keys.sh
server/shared/: Cargo.toml
server/shared/src/: lib.rs
server/shared/src/config/: auth.rs  cache.rs  database.rs  environment.rs  mod.rs  rate_limit.rs  server.rs
server/shared/src/errors/: mod.rs
server/shared/src/types/: common.rs  language.rs  mod.rs  pagination.rs  response.rs
server/shared/src/utils/: mod.rs  phone.rs  validation.rs
server/tests/: rate_limit_integration_test.rs
(+160 files in other folders)
