[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies from workspace
core = { path = "../core" }
infra = { path = "../infra" }

# Web framework
actix-web = "4.5"
actix-cors = "0.7"

# Authentication
jsonwebtoken = "9.3"

# Async runtime
tokio = { version = "1.39", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Configuration
dotenv = "0.15"
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.10"