[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core business logic and domain layer for RenovEasy backend"
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true

# Date and time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Error handling
thiserror.workspace = true