[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core business logic and domain layer for RenovEasy backend"
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Date and time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# Error handling
thiserror.workspace = true

# Random number generation
rand.workspace = true

# Async trait support
async-trait = "0.1"

# JWT token handling
jsonwebtoken.workspace = true

# Hashing for refresh tokens
sha2 = "0.10"
hex = "0.4"

# Async runtime for audit service
tokio = { version = "1.35", features = ["rt", "macros"] }

[dev-dependencies]
# Testing utilities
tokio = { version = "1.35", features = ["test-util", "macros", "rt-multi-thread"] }