[package]
name = "re_infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Infrastructure layer - Database, cache, SMS, and external service implementations"
repository.workspace = true

[dependencies]
# Core domain and error types
re_core = { path = "../core" }
# Shared module
re_shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Cache (Redis)
redis = { workspace = true }

# HTTP client for external services
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Date and time
chrono = { workspace = true }

# UUID support
uuid = { workspace = true }

# Cryptography for phone hashing
sha2 = "0.10"

# Async trait support
async-trait = "0.1"

# Logging and tracing
tracing = { workspace = true }

# Base64 encoding (for SMS services)
base64 = { workspace = true }

# Twilio SDK for SMS services
twilio = { version = "1.0", optional = true }

# AWS SDK for SNS (SMS services)
aws-config = { version = "1.1", optional = true }
aws-sdk-sns = { version = "1.15", optional = true }
aws-credential-types = { version = "1.2", optional = true }

# Phone number validation
phonenumber = "0.3"

# Configuration
config = { workspace = true }

# Environment variables
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
rand = "0.8"

[features]
default = ["mysql", "redis-cache", "twilio-sms", "aws-sns"]
mysql = ["sqlx/mysql"]
redis-cache = ["redis/tokio-comp"]
twilio-sms = ["twilio"]
aws-sns = ["aws-config", "aws-sdk-sns", "aws-credential-types"]
mock-services = []