[package]
name = "re_shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date and time
chrono = { workspace = true }

# Validation
regex = { workspace = true }
once_cell = { workspace = true }

# UUID support
uuid = { workspace = true }
